sandbox/output
Hiker.java:11: error: illegal start of expression
                if(ints[i] != null &&) {
                                     ^
1 error
